# hfurl

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
hfurl/: __init__.py
tests/: test_hfurl.py
